--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 beautifulsoup4==4.5.3
+boto==2.46.1
+bz2file==0.98
 cffi==1.9.1
 configparser==3.5.0
 cryptography==1.7.2
@@ -7,6 +9,7 @@ dj-database-url==0.4.1
 Django==1.9.7
 enum34==1.1.6
 flake8==3.3.0
+gensim==2.0.0
 gunicorn==19.6.0
 idna==2.2
 ipaddress==1.0.18
@@ -14,6 +17,7 @@ jieba==0.38
 lxml==3.7.3
 mccabe==0.6.1
 ndg-httpsclient==0.4.2
+numpy==1.12.1
 pep8==1.7.0
 psycopg2==2.6.1
 pyasn1==0.2.2
@@ -22,6 +26,8 @@ pycparser==2.17
 pyflakes==1.5.0
 pyOpenSSL==16.2.0
 requests==2.13.0
+scipy==0.19.0
 six==1.10.0
+smart-open==1.5.2
 vim-debug==1.5.4
 whitenoise==2.0.6
